--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body,
 }
 
 body {
-  background-color: #333;
+  background-color: #000000;
   color: white;
   font-family: Arial, sans-serif;
 }
@@ -16,6 +16,7 @@ body {
 li {
   color: white;
   font-size: 3rem;
+  
 }
 
 h1 {
@@ -24,8 +25,13 @@ h1 {
 }
 h2 {
   font-size: 5rem;
-  text-align: center;
+  
 }
 .Hi {
-
+  font-size: medium;
+  
+}
+.link {
+  font-size: large;
+  text-align: center;
 }
